feat: add userRating from organizer
