# src/controllers/organizer/organizer.ts
@@ -1,12 +1,13 @@
 import DOMPurify from 'isomorphic-dompurify';
 import { handleAppError, handleResponse } from '../../services/handleResponse';
-import { ActivityModel, OrganizerModel } from '../../models';
+import { ActivityModel, OrganizerModel, TicketModel, UserRatingModel } from '../../models';
 import {
   status404Codes,
   status422Codes,
   status500Codes,
   status400Codes,
-  status405Codes
+  status405Codes,
+  status409Codes
 } from '../../types/enum/appStatusCode';
 import { convertCityToArea } from '../../utils/helpers';
 import dayjs from 'dayjs';
@@ -370,5 +371,69 @@ export const organizerController = {
     }
 
     handleResponse(res, activityData, '取得成功');
+  },
+  // 主揪評論跟團仔
+  async createRating(req: Request, res: Response, next: NextFunction) {
+    const ObjectId = Types.ObjectId;
+    const ticketId = req.params.id;
+    const ogId = (req as JwtPayloadRequest).user._id;
+    const { rating, comment } = req.body;
+
+    if (!ObjectId.isValid(ticketId)) {
+      handleAppError(
+        400,
+        status400Codes[status400Codes.INVALID_REQEST],
+        status400Codes.INVALID_REQEST,
+        next
+      );
+    }
+    const ticketData = await TicketModel.findOne({ _id: ticketId, organizer: ogId });
+    if (!ticketData || !ticketData.activity) {
+      handleAppError(
+        404,
+        status404Codes[status404Codes.NOT_FOUND_TICKET],
+        status404Codes.NOT_FOUND_TICKET,
+        next
+      );
+      return;
+    }
+    if (ticketData.ticketStatus !== 1) {
+      handleAppError(
+        400,
+        status400Codes[status400Codes.TICKET_UNUSED],
+        status400Codes.TICKET_UNUSED,
+        next
+      );
+      return;
+    }
+    const checkRatingData = await UserRatingModel.findOne({ ticketId });
+    if (checkRatingData) {
+      handleAppError(
+        409,
+        status409Codes[status409Codes.ALREADY_EXISTS],
+        status409Codes.ALREADY_EXISTS,
+        next
+      );
+      return;
+    }
+    try {
+      const createRating = await UserRatingModel.create({
+        ticket: ticketId,
+        rating,
+        comment,
+        organizerId: ogId,
+        activityId: ticketData.activity,
+        ticketId,
+        userId: ticketData.owner
+      });
+      handleResponse(res, createRating, '建立成功');
+    } catch (error) {
+      handleAppError(
+        500,
+        status500Codes[status500Codes.CREATE_FAILED],
+        status500Codes.CREATE_FAILED,
+        next
+      );
+    }
   }
 };
