# src/types/dto/rating.ts
@@ -4,7 +4,7 @@ export interface IOrganizerRating extends Document, SchemaTimestampsConfig {
   rating: number;
   comment: string;
   activityId: Types.ObjectId;
-  // ticketId: Types.ObjectId;
+  ticketId: Types.ObjectId;
   organizerId: Types.ObjectId;
   userId: Types.ObjectId;
 }
@@ -12,7 +12,7 @@ export interface IUserRating extends Document, SchemaTimestampsConfig {
   rating: number;
   comment: string;
   activityId: Types.ObjectId;
-  // ticketId: Types.ObjectId;
+  ticketId: Types.ObjectId;
   organizerId: Types.ObjectId;
   userId: Types.ObjectId;
 }
